force-app/main/default/objects/Contact/fields/New_Contact_Text_Field__c.field-meta.xml
<CustomField>
    <fullName>New_Contact_Text_Field__c</fullName>
    <label>New Contact Text Field</label>
    <length>100</length>
    <type>Text</type>
</CustomField>