force-app/main/default/objects/Contact/fields/Second_date_field__c.field-meta.xml
<CustomField>
    <fullName>Second_date_field__c</fullName>
    <label>Second date field</label>
    <type>Date</type>
</CustomField>