force-app/main/default/objects/Contact/fields/Third_Contact_fields__c.field-meta.xml
<CustomField>
    <fullName>Third_Contact_fields__c</fullName>
    <label>Third Contact fields</label>
    <length>100</length>
    <type>Text</type>
</CustomField>